--- a/react-bg-changer/src/App.css
+++ b/react-bg-changer/src/App.css
@@ -1,19 +1,9 @@
 #root {
-  max-width: 1280px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-/* #color-buttons{
-  background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: .5px solid black;
-  border-radius: 6px;
-  padding: 6px 12px;
-} */
 
 @keyframes logo-spin {
   from {
